[package]
name = "radiotap"
version = "2.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"

# Metadata (https://doc.rust-lang.org/cargo/reference/manifest.html)
description = "A parser for the Radiotap capture format. See http://www.radiotap.org."
homepage = "https://github.com/rossmacarthur/radiotap"
repository = "https://github.com/rossmacarthur/radiotap"
readme = "README.md"
keywords = ["frame", "packet", "parsing", "pcap", "radiotap", "wifi"]
license = "Apache-2.0/MIT"

[dependencies]
bitops = "0.1.0"
byteorder = "1.3.2"
quick-error = { package = "quick-error2", version = "2.0.1" }

[dev-dependencies]
pcap = "0.7.0"
